packages/compiler/tests/compile/yaml/errors/not_allowed_char.t/run.t
Caractère non valide

  $ publicodes compile input.publicodes
  E001
  fin de fichier inattendue (il manque un caractère) [yaml error]
       ╒══  input.publicodes:1:1 ══
     1 │ '
       │ ˘
   Hint: Par exemple, `"`, `'`, ou `]`
  [123]
